--- a/vars/main.yaml
+++ b/vars/main.yaml
@@ -6,3 +6,5 @@ kafka__default_listeners: "{{ ('controller' in kafka_node_roles) | ternary(('bro
 kafka__listeners: "{{ (kafka_listeners | length > 0) | ternary(kafka_listeners, kafka__default_listeners) }}"
 kafka__uuid_file: "{{ kafka_home }}/CLUSTER_UUID.lock"
 kafka__config_path: "{{ kafka_config_path | default(kafka_home ~ '/server.properties') }}"
+prometheus_exporter__download_url: https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/0.19.0/jmx_prometheus_javaagent-0.19.0.jar
+prometheus_exporter__download_destination: /opt/jmx_exporter.jar
