--- a/vars/main.yaml
+++ b/vars/main.yaml
@@ -1,4 +1,5 @@
 ---
+kafka_node_roles: "{{ kafka_node_roles_raw | split(',')}}"
 kafka__download_url: https://archive.apache.org/dist/kafka/{{ kafka_version }}/kafka_{{ kafka_scala_version }}-{{ kafka_version }}.tgz
 kafka__download_destination: "{{ kafka_download_directory }}/kafka_{{ kafka_scala_version }}-{{ kafka_version }}.tgz"
 kafka__dependencies: "{{ (ansible_os_family == 'Debian') | ternary(['openjdk-' ~ kafka_java_version ~ '-jre-headless'], 'java-' ~ kafka_java_version ~ '-openjdk-headless') }}"
